# OpenGLEngine

./: .gitignore  Kraken Engine.sln  LearnOpenGL.sln  main.cpp  meson.build  project.vcxproj  project.vcxproj.filters
LearnOpenGL/: LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  RenderWindow.hpp  Shader.hpp  TextureCache.hpp  main.cpp  render_window.cpp  shader.cpp  shader.frag  shader.vert  texture_cache.cpp
include/: BufferObject.hpp  Camera.hpp  Clock.hpp  Constants.hpp  Cube.hpp  Input.hpp  KrakenEngine.hpp  Light.hpp  Mesh.hpp  Model.hpp  RenderWindow.hpp  Shader.hpp  Texture.hpp  Time.hpp  VertexArray.hpp  Window.hpp
shaders/: default.frag  default.vert  shader.frag
src/: buffer_object.cpp  camera.cpp  clock.cpp  cube.cpp  input.cpp  light.cpp  main.cpp  mesh.cpp  meson.build  model.cpp  render_window.cpp  shader.cpp  texture.cpp  texture_cache.cpp  time.cpp  vertex_array.cpp  window.cpp  write_sources.py
